Fix: justify center everything

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
         <img src="./images/img_4.png" alt="">
         <img src="./images/img_5.png" alt="">
         <img src="./images/img_6.png" alt="">
-
     </div>
     <section id="galleryLoad" class="postarea">
         <h3>Continue exploring HODU</h3>
@@ -60,24 +59,26 @@
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7bb9040501e09cd772f2c2c6b18cdcfe"></script>
         <script type="text/javascript" src="script.js"></script>
     </article>
-    <article id="subscribe">
-        <article>
-            <h2>Subscribe to our Blog post</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <div class="subarea">
+        <article id="subscribe">
+            <article>
+                <h2>Subscribe to our Blog post</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </article>
+            <form>
+                <div>
+                    <img src="./icons/icon_mail.svg" alt="">
+                    <label for="emailInput"></label>
+                    <input type="email" id="emailInput" placeholder="Enter your e-mail address" required>
+                </div>
+                <input type="button" class="formButton" value="Subscribe">
+            </form>
         </article>
-        <form>
-            <div>
-                <img src="./icons/icon_mail.svg" alt="">
-                <label for="emailInput"></label>
-                <input type="email" id="emailInput" placeholder="Enter your e-mail address" required>
-            </div>
-            <input type="button" class="formButton" value="Subscribe">
-        </form>
-    </article>
-    <img id="footerImage" src="./images/img_foot.png" alt="">
+        <img id="footerImage" src="./images/img_foot.png" alt="">
+    </div>
     <footer>
         <img src="./icons/logo.svg" class="footerLogo" alt="">
-        <div>
+        <div class="icons">
             <img src="./icons/icon_blog.svg" class="icon" alt="">
             <img src="./icons/icon_insta.svg" class="icon" alt="">
             <img src="./icons/icon_facebook.svg" class="icon" alt="">
