Design: add img shadow

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="./icons/logo.svg" class="headerLogo" alt="로고">
             <nav class="headerMenu">
                 <a href="#">Home</a>
-                <a href="#gallary">Gallary</a>
+                <a href="#galleryInfo">Gallary</a>
                 <a href="#map">Map</a>
                 <button class="download">Download</button>
             </nav>
@@ -40,9 +40,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at incidunt magnam, nam odit officiis omnis quas quasi quisquam rem sit suscipit ut? Atque earum, eius eos harum quaerat rem?</p>
     </div>
     <div id="gallery" class="postarea">
-        <img src="./images/img_1.png" alt="">
-        <img src="./images/img_2.png" alt="">
-        <img src="./images/img_3.png" alt="">
+        <img src="./images/hongsi.jpg" alt="">
+        <img src="./images/hongsi-2.jpg" alt="">
+        <img src="./images/seol.jpg" alt="">
         <img src="./images/img_4.png" alt="">
         <img src="./images/img_5.png" alt="">
         <img src="./images/img_6.png" alt="">
