--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>서울 서초구 강남대로 27</p>
         <div id="map"></div>
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7bb9040501e09cd772f2c2c6b18cdcfe"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="kakaomap.js"></script>
     </article>
     <div class="subarea">
         <article id="subscribe">
@@ -65,14 +65,14 @@
                 <h2>Subscribe to our Blog post</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </article>
-            <form>
+            <div class="emailForm">
                 <div>
                     <img src="./icons/icon_mail.svg" alt="">
                     <label for="emailInput"></label>
-                    <input type="email" id="emailInput" placeholder="Enter your e-mail address" required>
+                    <input type="text" id="emailInput" placeholder="Enter anything and CLICK the button">
                 </div>
-                <input type="button" class="formButton" value="Subscribe">
-            </form>
+                <button id="formButton">Click me!</button>
+            </div>
         </article>
         <img id="footerImage" src="./images/img_foot.png" alt="">
     </div>
@@ -89,5 +89,14 @@
         <a href="#"><img src="./icons/scroll-top-btn-hover.svg" alt="맨위로"></a>
         <img class="topButton" src="./icons/scroll-top-btn.svg" alt="">
     </div>
+    <div id="modal">
+        <div class="modalElements">
+            <img src="./images/modalcat.png" alt="">
+            <h2>Thank you!</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button type="button" id="okButton">OK! I Love HODU</button>
+        </div>
+    </div>
+    <script type="text/javascript" src="subModal.js"></script>
 </body>
 </html>
