Feat: footer icon anchor

--- a/index.html
+++ b/index.html
@@ -79,10 +79,18 @@
     <footer>
         <img src="./icons/logo.svg" class="footerLogo" alt="">
         <div class="icons">
-            <img src="./icons/icon_blog.svg" class="icon" alt="">
-            <img src="./icons/icon_insta.svg" class="icon" alt="">
-            <img src="./icons/icon_facebook.svg" class="icon" alt="">
-            <img src="./icons/icon_youtube.svg" class="icon" alt="">
+            <a href="https://github.com/InseonYoon" target="_blank">
+                <img src="./icons/icon_github.svg" class="icon" style="width: 42px" alt="">
+            </a>
+            <a href="https://twitter.com/devchrong" target="_blank">
+                <img src="./icons/icon_twitter.svg" class="icon" style="width: 42px" alt="">
+            </a>
+            <a href="https://www.instagram.com/intotheseon/" target="_blank">
+                <img src="./icons/icon_insta.svg" class="icon" alt="">
+            </a>
+            <a href="https://www.youtube.com/watch?v=q3m4VoXRviY&list=PLI1lHEaEvswfK9i-AYUyHR-czLCNMCuzd&index=1" target="_blank">
+                <img src="./icons/icon_youtube.svg" class="icon" alt="">
+            </a>
         </div>
     </footer>
     <div class="scroll-top-btn">
