Refactor: divide style.css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>내 친구의 친구들</title>
-    <link rel="stylesheet" href="style.css">
-<!--    <script src="script.js"></script>-->
+    <link rel="stylesheet" href="./css/general-style.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/middle.css">
+    <link rel="stylesheet" href="./css/gallery.css">
+    <link rel="stylesheet" href="./css/address.css">
+    <link rel="stylesheet" href="./css/subscribe.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
     <header>
@@ -57,7 +63,6 @@
         <p>서울 서초구 강남대로 27</p>
         <div id="map"></div>
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7bb9040501e09cd772f2c2c6b18cdcfe"></script>
-        <script type="text/javascript" src="kakaomap.js"></script>
     </article>
     <div class="subarea">
         <article id="subscribe">
@@ -105,6 +110,8 @@
             <button type="button" id="okButton">OK! I Love HODU</button>
         </div>
     </div>
-    <script type="text/javascript" src="subModal.js"></script>
+    <script type="text/javascript" src="./js/infiniteScroll.js"></script>
+    <script type="text/javascript" src="./js/kakaomap.js"></script>
+    <script type="text/javascript" src="./js/subModal.js"></script>
 </body>
 </html>
