Feat: add alert in .download and change theme color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>내 친구의 친구들</title>
+    <link rel="icon" href="./icons/dino.svg">
     <link rel="stylesheet" href="./css/general-style.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -110,6 +111,7 @@
             <button type="button" id="okButton">OK! I Love HODU</button>
         </div>
     </div>
+    <script type="text/javascript" src="./js/clickDownload.js"></script>
     <script type="text/javascript" src="./js/infiniteScroll.js"></script>
     <script type="text/javascript" src="./js/kakaomap.js"></script>
     <script type="text/javascript" src="./js/subModal.js"></script>
