--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="postarea">
-            <img src="./icons/logo.svg" class="headerLogo" alt="로고">
+            <img src="./icons/logo-hongsi.svg" class="headerLogo" alt="로고">
             <nav class="headerMenu">
                 <a href="#">Home</a>
                 <a href="#galleryInfo">Gallary</a>
@@ -28,62 +28,62 @@
     <main>
         <div class="postarea">
             <article class="columnPost">
-                <h1>내 친구의 친구들을 소개합니다!</h1>
-                <p>프젝에 쓰려고 진짜 정말로 제 친구들의 반려동물 사진을 뜯어내어왔습니다. 여섯장을 채울 수 있을지 모르겠네요. 지금까지 두장을 모았습니다. 고양이 세마리 키우는 친구만 포섭하면 한방에 다섯장까지 채울 수 있을듯 합니다.</p>
+                <h1>내 친구의 친구, <strong>홍시</strong>를 소개합니다!</h1>
+                <p>사실 친구들의 반려동물 사진을 잔뜩 넣고 싶었는데 허락을 다 못받았습니다. 그래서 허락받은 친구들의 친구 중 하나로만 페이지를 채워보려고요.<br>이 친구의 친구는 <strong>홍시</strong>입니다. 친구의 증언에 따르면 <strong>노즈워크 만들면 3초만에 조지는 미친 강아지</strong>이지만, 똑똑한 건 아니고 그냥 식탐이 많아서 그런거랍니다.</p>
                 <button class="download">Download</button>
             </article>
-            <img src="./images/img_head.png" alt="박스냥이">
+            <img src="./images/hongsi-pig.jpg" alt="돼지홍시">
         </div>
     </main>
     <div id="middle" class="postarea">
-        <img src="./images/img_0.png" alt="누운냥이">
+        <img src="./images/seol.jpg" alt="흑설이">
         <article class="columnPost">
-            <h2>지금 깨달은건데 로렘입숨 쓸때마다 다르게 나오네???</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem beatae consequuntur culpa, cum doloribus ducimus ex expedita iusto maxime minima nostrum numquam odio officiis sit sunt tempora totam velit veritatis.</p>
+            <h2>그래도 안 보여주긴 아까운 <strong>설이</strong></h2>
+            <p>홍시 사진으로만 채울까 했는데 다른 친구도 허락해줘서 한장 슬쩍 끼워넣어봅니다. 짱짱 멋진 흑설이도 보고 가세요~</p>
         </article>
     </div>
     <div id="galleryInfo" class="postarea">
-        <h1>이미지 구역 타이틀</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at incidunt magnam, nam odit officiis omnis quas quasi quisquam rem sit suscipit ut? Atque earum, eius eos harum quaerat rem?</p>
+        <h1>홍시 사진 보고 가세요</h1>
+        <p>홍시로만 전부 채워보고 싶었지만 <strong>무한 스크롤</strong>로 보여주기엔 사진이 턱없이 부족하여<br>하는 수 없이 남의 집 멍멍이들을 무작위로 선점하였습니다. <br>하지만 홍시의 귀여움은 여섯 장의 사진으로도 충분히 느낄 수 있죠!</p>
     </div>
     <div id="gallery" class="postarea">
         <img src="./images/hongsi.jpg" alt="">
         <img src="./images/hongsi-2.jpg" alt="">
-        <img src="./images/seol.jpg" alt="">
-        <img src="./images/img_4.png" alt="">
-        <img src="./images/img_5.png" alt="">
-        <img src="./images/img_6.png" alt="">
+        <img src="./images/hongsi-3.jpg" alt="">
+        <img src="./images/hongsi-4.jpg" alt="">
+        <img src="./images/hongsi-5.jpg" alt="">
+        <img src="./images/hongsi-6.jpg" alt="">
     </div>
     <section id="galleryLoad" class="postarea">
-        <h3>Continue exploring HODU</h3>
+        <h3>다른집 개 사진 더보기</h3>
         <button class="showmore">Show more</button>
     </section>
     <hr>
     <article id="address" class="postarea">
-        <h2>Et in arcadia ego</h2>
-        <p>서울 서초구 강남대로 27</p>
+        <h2>홍시는 여기에서 왔어요</h2>
+        <p>경기 남양주시 경강로163번길 32-27<br>남양주시동물보호센터</p>
         <div id="map"></div>
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7bb9040501e09cd772f2c2c6b18cdcfe"></script>
     </article>
     <div class="subarea">
         <article id="subscribe">
             <article>
-                <h2>Subscribe to our Blog post</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2>홍시를 더 보고싶다면</h2>
+                <p>홍시네 댕스타그램 링크를 걸고 싶은데 거기까진 허락을 못받았어요...</p>
             </article>
             <div class="emailForm">
                 <div>
                     <img src="./icons/icon_mail.svg" alt="">
                     <label for="emailInput"></label>
-                    <input type="text" id="emailInput" placeholder="Enter anything and CLICK the button">
+                    <input type="email" id="emailInput" placeholder="이메일처럼_보이는거@아무거나.입력">
                 </div>
                 <button id="formButton">Click me!</button>
             </div>
         </article>
-        <img id="footerImage" src="./images/img_foot.png" alt="">
+        <img id="footerImage" src="./images/hongsi-pig-row.jpg" alt="">
     </div>
     <footer>
-        <img src="./icons/logo.svg" class="footerLogo" alt="">
+        <img src="./icons/logo-hongsi.svg" class="footerLogo" alt="로고">
         <div class="icons">
             <a href="https://github.com/InseonYoon" target="_blank">
                 <img src="./icons/icon_github.svg" class="icon" style="width: 42px" alt="">
@@ -105,10 +105,10 @@
     </div>
     <div id="modal">
         <div class="modalElements">
-            <img src="./images/modalcat.png" alt="">
-            <h2>Thank you!</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <button type="button" id="okButton">OK! I Love HODU</button>
+            <img src="./images/hongsi-berry.png" alt="">
+            <h2>감사합니다!</h2>
+            <p>드릴 건 없고 딸기넥카라 한 홍시나 보고 가세요.</p>
+            <button type="button" id="okButton">홍 시 조 아</button>
         </div>
     </div>
     <script type="text/javascript" src="./js/clickDownload.js"></script>
