Design: feat modal texts

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div>
                     <img src="./icons/icon_mail.svg" alt="">
                     <label for="emailInput"></label>
-                    <input type="email" id="emailInput" placeholder="이메일처럼_보이는거@아무거나.입력">
+                    <input type="text" id="emailInput" placeholder="뭐 안써도 되니까 버튼만 눌러보세요">
                 </div>
                 <button id="formButton">Click me!</button>
             </div>
@@ -83,7 +83,9 @@
         <img id="footerImage" src="./images/hongsi-pig-row.jpg" alt="">
     </div>
     <footer>
-        <img src="./icons/logo-hongsi.svg" class="footerLogo" alt="로고">
+        <a href="#" class="footerLogo">
+            <img src="./icons/logo-hongsi.svg" alt="로고">
+        </a>
         <div class="icons">
             <a href="https://github.com/InseonYoon" target="_blank">
                 <img src="./icons/icon_github.svg" class="icon" style="width: 42px" alt="">
@@ -107,8 +109,8 @@
         <div class="modalElements">
             <img src="./images/hongsi-berry.png" alt="">
             <h2>감사합니다!</h2>
-            <p>드릴 건 없고 딸기넥카라 한 홍시나 보고 가세요.</p>
-            <button type="button" id="okButton">홍 시 조 아</button>
+            <p>드릴 건 없고 딸기넥카라 한 홍시라도 보고 가세요.</p>
+            <button type="button" id="okButton">홍.시.조.아</button>
         </div>
     </div>
     <script type="text/javascript" src="./js/clickDownload.js"></script>
