--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>홍시로만 전부 채워보고 싶었지만 <strong>무한 스크롤</strong>로 보여주기엔 사진이 턱없이 부족하여<br>하는 수 없이 남의 집 멍멍이들을 무작위로 선점하였습니다. <br>하지만 홍시의 귀여움은 여섯 장의 사진으로도 충분히 느낄 수 있죠!</p>
     </div>
     <div id="gallery" class="postarea">
-        <img src="./images/hongsi.jpg" alt="">
+        <img src="./images/hongsi-1.jpg" alt="">
         <img src="./images/hongsi-2.jpg" alt="">
         <img src="./images/hongsi-3.jpg" alt="">
         <img src="./images/hongsi-4.jpg" alt="">
@@ -108,8 +108,8 @@
     <div id="modal">
         <div class="modalElements">
             <img src="./images/hongsi-berry.png" alt="">
-            <h2>감사합니다!</h2>
-            <p>드릴 건 없고 딸기넥카라 한 홍시라도 보고 가세요.</p>
+            <h2>이봐 친구! 그거 알아?</h2>
+            <p>홍시 한 마리에겐 홍시 한 마리 분의 털이 나온다는 놀라운 사실을!</p>
             <button type="button" id="okButton">홍.시.조.아</button>
         </div>
     </div>
