Feat: add hongsi dogstagram button

--- a/index.html
+++ b/index.html
@@ -69,13 +69,16 @@
         <article id="subscribe">
             <article>
                 <h2>홍시를 더 보고싶다면</h2>
-                <p>홍시네 댕스타그램 링크를 걸고 싶은데 거기까진 허락을 못받았어요...</p>
+                <span>홍시 인스타그램으로 놀러오세요! </span>
+                <a href="https://www.instagram.com/hongsi_1230/" target="_blank">
+                    <button>@hongsi_1230</button>
+                </a>
             </article>
             <div class="emailForm">
                 <div>
                     <img src="./icons/icon_mail.svg" alt="">
                     <label for="emailInput"></label>
-                    <input type="text" id="emailInput" placeholder="뭐 안써도 되니까 버튼만 눌러보세요">
+                    <input type="text" id="emailInput" placeholder="오른쪽 버튼도 이왕 만든거 눌러나 보세요">
                 </div>
                 <button id="formButton">Click me!</button>
             </div>
